--- a/index.html
+++ b/index.html
@@ -6,21 +6,18 @@
     <title>Weather App</title>
   </head>
   <body>
+    <div class="container">
+      <h1>Weather</h1>
+      <h2 id="location"></h2>
+      <div id="icon"></div>
+      <p id="temp"></p>
+      <button class="button" id="btn">Conversion</button>
+    </div>
+
+    <footer>
+      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      <script type="text/javascript" src="./main.js"></script>
+    </footer>
 
   </body>
 </html>
-
-<body>
-
-  <div class="container">
-    <h1>Weather</h1>
-    <h2 id="location"></h2>
-    <div id="icon"></div>
-    <p id="temp"></p>
-    <button class="button" id="btn">Conversion</button>
-  </div>
-
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script type="text/javascript" src="./main.js"></script>
-
-</body>
